--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     ],
     "autoload": {
         "psr-4": {
-            "nlib\\Yaml\\": "nlib/lib-yaml/"
+            "nlib\\Yaml\\": ""
         }
     },
     "minimum-stability": "dev",
