--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,8 @@
     "license": "MIT",
     "require": {
         "php": "^7.1.3",
-        "symfony/yaml": "^4.3"
+        "symfony/yaml": "^4.3",
+        "nlib/log" : "dev-master"
     },
     "authors": [
         {
