--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,7 @@
     "require": {
         "php": "^7.1.3",
         "symfony/yaml": "^4.3",
-        "nlib/log" : "dev-master"
+        "nlib/log" : "^1.0"
     },
     "authors": [
         {
