update PHP version

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "description": "Library Yaml",
     "license": "MIT",
     "require": {
-        "php": "^7.1.3",
+        "php": "^7.1.3|^8.0",
         "symfony/yaml": "^4.3",
         "nlib/lib-log" : "dev-master@dev"
     },
